# cpp-oop-labs

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
lab1/: CMakeLists.txt  main.cpp
lab1/include/: solution.h
lab1/src/: solution.cpp
lab1/tests/: tests.cpp
